--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -14,7 +14,7 @@ services:
     environment:
       # see https://docs.ghost.org/docs/config#section-running-ghost-with-config-env-variables
       NODE_ENV: development
-      url: https://rockifood.com/
+      url: https://www.rockifood.com/
       #database__client: mysql
       #database__connection__host: db
       #database__connection__user: root
@@ -22,9 +22,9 @@ services:
       #database__connection__database: ghost
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.web.rule=Host(`rockifood.com`)"
+      - "traefik.http.routers.web.rule=Host(`www.rockifood.com`)"
       - "traefik.http.routers.web.entrypoints=web"
-      - "traefik.http.routers.web-secure.rule=Host(`rockifood.com`)"
+      - "traefik.http.routers.web-secure.rule=Host(`www.rockifood.com`)"
       - "traefik.http.routers.web-secure.entrypoints=web-secure"
       - "traefik.http.routers.web-secure.tls=true"
       - "traefik.http.services.bot.loadbalancer.server.port=2368"
