--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -14,7 +14,7 @@ services:
     environment:
       # see https://docs.ghost.org/docs/config#section-running-ghost-with-config-env-variables
       NODE_ENV: development
-      url: https://www.rockifood.com/
+      url: https://rockifood.com/
       #database__client: mysql
       #database__connection__host: db
       #database__connection__user: root
@@ -23,9 +23,9 @@ services:
     deploy:
       labels:
         - "traefik.enable=true"
-        - "traefik.http.routers.web.rule=Host(`www.rockifood.com`)"
+        - "traefik.http.routers.web.rule=HostRegexp(`{host:(www.)?rockifood.com}`)"
         - "traefik.http.routers.web.entrypoints=web"
-        - "traefik.http.routers.web-secure.rule=Host(`www.rockifood.com`)"
+        - "traefik.http.routers.web-secure.rule=HostRegexp(`{host:(www.)?rockifood.com}`)"
         - "traefik.http.routers.web-secure.entrypoints=web-secure"
         - "traefik.http.routers.web-secure.tls=true"
         - "traefik.http.services.bot.loadbalancer.server.port=2368"
@@ -36,6 +36,7 @@ services:
         - "traefik.http.middlewares.redirect-https.redirectscheme.permanent=true"
         # set redirect-https middleware to api-http router. @docker suffix is optional, as @file it just points to the source of configuration (can be docker label, file, k8s, etc)
         - "traefik.http.routers.web.middlewares=redirect-https@docker" 
+        - "traefik.http.routers.web.middlewares=nonwww-redirect@file" 
         - "traefik.http.routers.web-secure.tls.certresolver=le"
     networks:
       - web
